src/objects/KS_Componente__c.object
<CustomObject>
    <description>KAIZENSTEP. ACTIVO. Componentes que definen una homologación</description>
    <fields>
        <fullName>KS_Cantidad__c</fullName>
        <label>Cantidad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Importe__c</fullName>
        <formula>KS_Cantidad__c * PVP_tarifa__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Importe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Producto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Componentes</relationshipLabel>
        <relationshipName>Componentes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_homologacion__c</fullName>
        <label>Homologación</label>
        <referenceTo>KS_Homologacion__c</referenceTo>
        <relationshipLabel>Componentes</relationshipLabel>
        <relationshipName>Componentes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PVP_tarifa__c</fullName>
        <description>El importe del producto agregado debe de sacarse de la tarifa, usando el valor de la fecha de cálculo de tarifa del objeto padre. 
La homologación es una lista de componentes y cantidades para cada uno. Se calculará el precio en base a la fecha de validez de tarifa.</description>
        <label>PVP tarifa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Componente</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Id componente</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Componentes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>